--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/priyanshuveb/DAO#readme",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.8",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.4.2",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.1",
